force-app/main/default/objects/Case_EmailMessage_Config__c/Case_EmailMessage_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Case EmailMessage Config</description>
    <label>Case EmailMessage Config</label>
</CustomObject>