force-app/main/default/objects/Case_EmailMessage_Config__c/fields/Days_For_ClosedCase_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_For_ClosedCase_Email__c</fullName>
    <description>Used to filter cases which are closed since these many days</description>
    <label>Days For ClosedCase Email</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>