force-app/main/default/objects/Case_EmailMessage_Config__c/fields/NewCase_From_Close_Business_Hours_Id__c.field-meta.xml
<CustomField>
    <fullName>NewCase_From_Close_Business_Hours_Id__c</fullName>
    <description>Default Business Hours Id for NewCase when created for Close case</description>
    <label>NewCase From Close Business Hours Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>