force-app/main/default/objects/Case_EmailMessage_Config__c/fields/NewCase_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>NewCase_RecordType_Id__c</fullName>
    <description>Default RecordType Id for NewCase when created for Close case</description>
    <label>NewCase RecordType Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>